--- a/package.json
+++ b/package.json
@@ -4,23 +4,16 @@
   "description": "Raspberry Pi eNail Controller in TypeScript (NodeJS)",
   "main": "app.js",
   "dependencies": {
+    "bindings":"^1.3.0",
     "blessed": "^0.1.81",
     "blessed-contrib": "git:github.com/J-Cat/blessed-contrib",
     "strongly-typed-events": "^1.4.2",
-    "ts-loader": "^4.2.0"
-  },
-  "overrides": {
-    "os": { 
-      "linux": {
-        "dependencies": {
-          "onoff": "^3.0.2",
-          "raspi": "^5.0.2",
-          "raspi-i2c": "^6.1.0",
-          "raspi-pwm": "^5.0.0",
-          "spi-device": "^2.0.1"
-        }
-      }
-    }
+    "ts-loader": "^4.2.0",
+    "onoff": "^3.0.2",
+    "raspi": "^5.0.2",
+    "raspi-i2c": "^6.1.0",
+    "raspi-pwm": "^5.0.0",
+    "spi-device": "^2.0.1"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.10",
@@ -32,7 +25,6 @@
     "typescript": "^2.8.1"
   },
   "scripts": {
-    "start": "babel-node src/app.ts"
   },
   "author": "",
   "license": "ISC"
