--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Raspberry Pi eNail Controller in TypeScript (NodeJS)",
   "main": "app.js",
   "dependencies": {
-    "bindings":"^1.3.0",
+    "bindings": "^1.3.0",
     "blessed": "^0.1.81",
     "blessed-contrib": "git:github.com/J-Cat/blessed-contrib",
-    "strongly-typed-events": "^1.4.2",
-    "ts-loader": "^4.2.0",
     "onoff": "^3.0.2",
     "raspi": "^5.0.2",
     "raspi-i2c": "^6.1.0",
     "raspi-pwm": "^5.0.0",
-    "spi-device": "^2.0.1"
+    "socket.io": "^2.1.0",
+    "spi-device": "^2.0.1",
+    "strongly-typed-events": "^1.4.2",
+    "ts-loader": "^4.2.0"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.10",
@@ -22,10 +23,10 @@
     "@types/raspi": "^5.0.0",
     "@types/raspi-i2c": "^6.1.0",
     "@types/raspi-pwm": "^5.0.0",
+    "@types/socket.io": "^1.4.33",
     "typescript": "^2.8.1"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
