--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bindings": "^1.3.0",
     "blessed": "^0.1.81",
     "blessed-contrib": "git:github.com/J-Cat/blessed-contrib",
+    "lodash.throttle": "^4.1.1",
     "onoff": "^3.0.2",
     "raspi": "^5.0.2",
     "raspi-i2c": "^6.1.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/blessed": "^0.1.10",
     "@types/es6-promise": "^3.3.0",
+    "@types/lodash.throttle": "^4.1.3",
     "@types/onoff": "0.0.27",
     "@types/raspi": "^5.0.0",
     "@types/raspi-i2c": "^6.1.0",
