--- a/pi-nail-server/package.json
+++ b/pi-nail-server/package.json
@@ -13,6 +13,7 @@
     "raspi-i2c": "^6.1.0",
     "raspi-pwm": "^5.0.0",
     "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "spi-device": "^2.0.1",
     "strongly-typed-events": "^1.4.2",
     "ts-loader": "^4.2.0"
@@ -26,6 +27,7 @@
     "@types/raspi-i2c": "^6.1.0",
     "@types/raspi-pwm": "^5.0.0",
     "@types/socket.io": "^1.4.33",
+    "@types/socket.io-client": "^1.4.32",
     "typescript": "^2.8.1"
   },
   "scripts": {},
