--- a/pi-nail-client/package.json
+++ b/pi-nail-client/package.json
@@ -16,19 +16,24 @@
     "@types/redux-socket.io": "^1.4.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/socket.io-client": "^1.4.32",
+    "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "react-scripts-ts": "2.15.1",
     "typescript": "^2.8.1"
   },
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
+    "autobind-decorator": "^2.1.0",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.41",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-autobind": "^1.0.6",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.3.1",
     "react-keydown": "^1.9.7",
+    "react-number-format": "^3.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
@@ -43,9 +48,13 @@
     "socket.io-client": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "start": "npm-run-all build-css watch-css start-ts",
+    "start-ts": "react-scripts-ts start",
+    "build": "npm-run-all build-css build-ts",
+    "build-ts": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "node-sass-chokidar src/ -o src/ --watch --follow"
   }
 }
