--- a/pi-nail-server/package.json
+++ b/pi-nail-server/package.json
@@ -12,6 +12,7 @@
     "raspi": "^5.0.2",
     "raspi-i2c": "^6.1.0",
     "raspi-pwm": "^5.0.0",
+    "redux": "^3.7.2",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "spi-device": "^2.0.1",
@@ -26,6 +27,7 @@
     "@types/raspi": "^5.0.0",
     "@types/raspi-i2c": "^6.1.0",
     "@types/raspi-pwm": "^5.0.0",
+    "@types/redux": "^3.6.0",
     "@types/socket.io": "^1.4.33",
     "@types/socket.io-client": "^1.4.32",
     "typescript": "^2.8.1"
