--- a/pi-nail-client/package.json
+++ b/pi-nail-client/package.json
@@ -28,11 +28,13 @@
     "classnames": "^2.2.5",
     "material-ui": "^1.0.0-beta.41",
     "prop-types": "^15.6.1",
+    "rc-slider": "^8.6.1",
     "react": "^16.3.1",
     "react-autobind": "^1.0.6",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.3.1",
     "react-keydown": "^1.9.7",
+    "react-material-ui-form-validator": "^2.0.0-beta.9",
     "react-number-format": "^3.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
@@ -42,6 +44,7 @@
     "redux": "^3.7.2",
     "redux-api-middleware": "^2.3.0",
     "redux-connect": "^7.0.0",
+    "redux-mediaquery": "^0.11.0",
     "redux-socket.io": "^1.4.0",
     "redux-throttle-actions": "^1.1.0",
     "redux-thunk": "^2.2.0",
