--- a/pi-nail-server/package.json
+++ b/pi-nail-server/package.json
@@ -8,26 +8,24 @@
     "blessed": "^0.1.81",
     "blessed-contrib": "git:github.com/J-Cat/blessed-contrib",
     "lodash.throttle": "^4.1.1",
+    "redux": "^3.7.2",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
+    "strongly-typed-events": "^1.4.2",
+    "ts-loader": "^4.2.0",
     "onoff": "^3.0.2",
     "raspi": "^5.0.2",
     "raspi-i2c": "^6.1.0",
     "raspi-pwm": "^5.0.0",
-    "redux": "^3.7.2",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0",
-    "spi-device": "^2.0.1",
-    "strongly-typed-events": "^1.4.2",
-    "ts-loader": "^4.2.0"
+    "spi-device": "^2.0.1"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.10",
-    "@types/es6-promise": "^3.3.0",
     "@types/lodash.throttle": "^4.1.3",
     "@types/onoff": "0.0.27",
     "@types/raspi": "^5.0.0",
     "@types/raspi-i2c": "^6.1.0",
     "@types/raspi-pwm": "^5.0.0",
-    "@types/redux": "^3.6.0",
     "@types/socket.io": "^1.4.33",
     "@types/socket.io-client": "^1.4.32",
     "typescript": "^2.8.1"
