--- a/pi-nail-client/package.json
+++ b/pi-nail-client/package.json
@@ -55,8 +55,9 @@
   "scripts": {
     "start": "npm-run-all --parallel build-css watch-css start-ts",
     "start-ts": "react-scripts-ts start",
-    "build": "npm-run-all build-css build-ts",
+    "build": "npm-run-all build-css build-ts copy-cordova",
     "build-ts": "react-scripts-ts build",
+    "copy-cordova": "robocopy build ..\\pi-nail-cordova\\www -MIR",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
